# plast-mem

./: .env.example  AGENTS.md  Cargo.toml  README.md  cspell.config.yaml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.eslint.json  tsconfig.json
benchmarks/locomo/: README.md  package.json
benchmarks/locomo/src/: checkpoint.ts  cli.ts  concurrency.ts  evaluation.ts  full-context.ts  ingest.ts  llm.ts  runner.ts  schemas.ts  stats.ts  types.ts  wait.ts
crates/ai/src/: embed.rs  embed_many.rs  embed_shared.rs  generate_object.rs  generate_text.rs
crates/core/src/: lib.rs  message_queue.rs
crates/core/src/memory/: episodic.rs
crates/entities/: README.md
crates/entities/src/: message_queue.rs
crates/migration/src/: m20260216_01_create_message_queue_table.rs  m20260315_01_align_episodic_content.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: server.rs
crates/server/src/api/: add_message.rs  benchmark.rs  mod.rs
crates/server/src/utils/: state.rs
crates/shared/src/: env.rs
crates/worker/: Cargo.toml  README.md
crates/worker/src/: lib.rs
crates/worker/src/jobs/: event_segmentation.rs  mod.rs  predict_calibrate.rs  semantic_consolidation.rs
docs/: ARCHITECTURE.md  TYPESCRIPT.md
docs/architecture/: daily_memory_optimizations.md  episodic_memory.md  graph_memory.md  longmemeval_optimizations.md  retrieve_memory.md  segmentation.md  semantic_memory.md
docs/todo/: README.md  flashbulb_memory.md  semantic_memory_confidence.md  semantic_memory_extension.md
src/: main.rs
