[package]
name = "plastmem_worker"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "plastmem_worker"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
apalis.workspace = true
futures.workspace = true
apalis-postgres.workspace = true
chrono.workspace = true
fsrs.workspace = true
schemars.workspace = true
plastmem_core.workspace = true
plastmem_entities.workspace = true
plastmem_ai.workspace = true
plastmem_shared.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower = { version = "0.4", features = [ "util" ] }
tracing = "0.1"
uuid.workspace = true
